// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<PageTitle /> Should render correctly 1`] = `
.c1 {
  margin: 0;
  font-size: 2.4rem;
  font-weight: bold;
}

.c2 {
  margin: 2.3rem 0 0 0;
}

.c0 {
  -webkit-animation: bbwGtI 0.4s ease-in-out;
  animation: bbwGtI 0.4s ease-in-out;
}

<div>
  <div
    class="c0"
  >
    <h1
      class="c1 c2"
    >
      Test
    </h1>
  </div>
  some text
</div>
`;

exports[`<PageTitle /> Should render correctly with custom className 1`] = `
.c1 {
  margin: 0;
  font-size: 2.4rem;
  font-weight: bold;
}

.c2 {
  margin: 2.3rem 0 0 0;
}

.c0 {
  -webkit-animation: bbwGtI 0.4s ease-in-out;
  animation: bbwGtI 0.4s ease-in-out;
}

<div>
  <div
    class="c0"
  >
    <h1
      class="c1 c2 test-custom-classname"
    >
      Test
    </h1>
  </div>
  some text
</div>
`;

exports[`<PageTitle /> Should render correctly with other props 1`] = `
.c3 {
  margin: 0;
  font-size: 2.4rem;
  font-weight: bold;
}

.c2 {
  margin: 0;
}

.c4 {
  margin: 2.3rem 0 0 0;
  margin-top: 1.5rem;
}

.c1 {
  margin: 1.5rem 0 0 0;
}

.c0 {
  -webkit-animation: bbwGtI 0.4s ease-in-out;
  animation: bbwGtI 0.4s ease-in-out;
}

@media (prefers-color-scheme:dark) {

}

@media (prefers-color-scheme:dark) {

}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
    >
      <span
        class="c2"
      >
        ⇠ test
      </span>
    </div>
  </div>
  <div
    class="c0"
  >
    <h1
      class="c3 c4"
    >
      Test
    </h1>
  </div>
  some text
</div>
`;
